--- a/COPriceEditor/COPriceEditor/COPriceEditor.csproj
+++ b/COPriceEditor/COPriceEditor/COPriceEditor.csproj
@@ -7,6 +7,7 @@
     <UseWindowsForms>true</UseWindowsForms>
     <ImplicitUsings>enable</ImplicitUsings>
     <ApplicationIcon>conquer.ico</ApplicationIcon>
+    <AllowUnsafeBlocks>True</AllowUnsafeBlocks>
   </PropertyGroup>
 
   <ItemGroup>
@@ -15,6 +16,7 @@
 
   <ItemGroup>
     <PackageReference Include="Krypton.Toolkit" Version="65.22.6.152" />
+    <PackageReference Include="Pfim" Version="0.11.1" />
   </ItemGroup>
 
 </Project>
